force-app/main/default/objects/Fact_SFDC_OrderHeader__x/Fact_SFDC_OrderHeader__x.object-meta.xml
<CustomObject>
    <externalDataSource>dgw_united_termite</externalDataSource>
    <externalName>Fact_SFDC_OrderHeader</externalName>
    <label>Customer Invoice</label>
    <pluralLabel>Customer Invoices</pluralLabel>
</CustomObject>