force-app/main/default/objects/Fact_SFDC_OrderHeader__x/fields/ChargeAmount__c.field-meta.xml
<CustomField>
    <fullName>ChargeAmount__c</fullName>
    <description>ChargeAmount</description>
    <externalDeveloperName>ChargeAmount</externalDeveloperName>
    <label>ChargeAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>