force-app/main/default/objects/Fact_SFDC_OrderHeader__x/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <description>CustomerNumber</description>
    <externalDeveloperName>CustomerNumber</externalDeveloperName>
    <label>CustomerNumber</label>
    <length>10</length>
    <referenceTargetField>Account.RWS_ID__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Invoices</relationshipLabel>
    <relationshipName>Customer_Invoices</relationshipName>
    <type>IndirectLookup</type>
</CustomField>