force-app/main/default/objects/Fact_SFDC_OrderHeader__x/fields/InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmount__c</fullName>
    <description>InvoiceAmount</description>
    <externalDeveloperName>InvoiceAmount</externalDeveloperName>
    <label>InvoiceAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>