force-app/main/default/objects/Fact_SFDC_OrderHeader__x/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <description>InvoiceNumber</description>
    <externalDeveloperName>InvoiceNumber</externalDeveloperName>
    <label>InvoiceNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>